--- a/.classpath
+++ b/.classpath
@@ -16,7 +16,12 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/home/guillaume/Documents/polytech/S6/java-ihm/json-20210307.jar">
+	<classpathentry kind="var" path="WORKSPACE_ROOT/OBIS3D/lib/jimObjModelImporterJFX.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="var" path="WORKSPACE_ROOT/OBIS3D/lib/json-20210307.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
